--- a/.github/workflows/scheduled_sync.yml
+++ b/.github/workflows/scheduled_sync.yml
@@ -24,7 +24,7 @@ on:
     #         │ │ │ │ │
     #         │ │ │ │ │
     #         * * * * *
-    - cron:  '10 */1 * * *'
+    - cron:  '30 2 * * *'
 
 jobs:
   merge:
